[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/World/Ground/GroundGrass.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GFX/World/ground_snow_small.png" type="Texture" id=2]
[ext_resource path="res://src/World/Ground/GroundGrassFallable.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96.3773, 47.05 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 10 )

[node name="GroundGrassFallable" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2( 0, -56 )
shape = SubResource( 1 )

[node name="FallTimer" type="Timer" parent="." index="3"]
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
